<resources>
    <string name="app_name">Pokedex</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_pokemon">Mis Pokemons</string>
    <string name="title_pokedex">Pokedex</string>
    <string name="title_settings">Ajustes</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="delete_pokemon">Eliminar mis pokemon</string>
    <string name="eliminar_mis_pokemon">Eliminar mis pokemon</string>
    <string name="acerca_de">Acerca de...</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="logout">cerrar sesión</string>
    <string name="about">acerca de</string>
    <string name="idioma">Idioma</string>
    <string name="language">idioma</string>
    <string name="number">Número de Pokédex: </string>
    <string name="switchOn">Opción de liberar deshabilitada</string>
    <string name="captured">Pokemon capturado!</string>
    <string name="errorCapture">Ha ocurrido un error: </string>
    <string name="allreadyCaptured">¡Ya tienes a ese Pokemon!</string>
    <string name="closeAbout">Cerrar</string>
    <string name="developer">Juanma Muñoz</string>
    <string name="version">1.0.0</string>
    <string name="tituloLogout">Cerrar sesión</string>
    <string name="msgLogout">¿Estás seguro de que deseas cerrar sesión?</string>
    <string name="buttonYes">Si</string>
    <string name="buttonNo">No</string>
    <string name="settingsTittle">AJUSTES</string>
    <string name="changeLanguage">Cambiar el idioma.</string>
    <string name="spanish">Español</string>
    <string name="english">Inglés</string>
    <string name="height">Altura: </string>
    <string name="weight">Peso: </string>
    <string name="types">Tipos: </string>
    <string name="free">¡Pokémon liberado!</string>
    <string name="errorFree">¡Error al liberar al Pokemon!</string>
    <string name="cantFree">¡No puedes liberar al Pokemon ahora!</string>
</resources>