<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_pokedex">

    <fragment
        android:id="@+id/navigation_pokemon"
        android:name="dam.pmdm.munoz_moreno_juanmanuel_pmdm03.ui.pokemon.PokemonFragment"
        android:label="@string/title_pokemon"
        tools:layout="@layout/fragment_pokemon" />

    <fragment
        android:id="@+id/navigation_pokedex"
        android:name="dam.pmdm.munoz_moreno_juanmanuel_pmdm03.ui.pokedex.PokedexFragment"
        android:label="@string/title_pokedex"
        tools:layout="@layout/fragment_pokedex" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="dam.pmdm.munoz_moreno_juanmanuel_pmdm03.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
    android:id="@+id/navigation_details"
    android:name="dam.pmdm.munoz_moreno_juanmanuel_pmdm03.ui.pokemon.PokeDetailFragment"
    android:label="@string/title_settings"
    tools:layout="@layout/fragment_settings" />


</navigation>